noinst_PROGRAMS = example benchmark stability_check fortran_mangling
AM_CPPFLAGS = -I $(top_srcdir)/include
example_SOURCES = example.c
benchmark_SOURCES = benchmark.c
stability_check_SOURCES = stability_check.c
fortran_mangling_SOURCES = fortran_mangling.f90
LDADD = $(top_builddir)/lib/libqsort_p.la
